--- a/locales/zh_CN/LC_MESSAGES/community/contributors.po
+++ b/locales/zh_CN/LC_MESSAGES/community/contributors.po
@@ -22,7 +22,7 @@ msgstr ""
 
 #: ../../community/contributors.md:1
 msgid "Contributors to this theme"
-msgstr ""
+msgstr "此主题的贡献者"
 
 #: ../../community/contributors.md:3
 msgid ""
